Adapt ui-router for html5mode

--- a/src/components/topLeftMenu/topLeftMenu.template.html
+++ b/src/components/topLeftMenu/topLeftMenu.template.html
@@ -4,67 +4,61 @@
     </button>
     <ul class="container-fluid top-left-menu-list" data-uib-dropdown-menu data-uib-dropdown-menu-auto-close="outsideClick">
         <li class="row-fluid">
-            <a data-ng-href="#/">
+            <a data-ui-sref="dashboard">
                 <i class="fa fa-home fa-fw"></i>
                 <span data-translate="menu_home"></span>
             </a>
         </li>
         <li class="row-fluid" data-ng-if="topLeftMenuCtrl.sagremorParams.benoicEnabled">
-            <a data-ng-href="#/switches">
+            <a data-ui-sref="switches">
                 <i class="fa fa-lightbulb-o fa-fw"></i>
                 <span data-translate="menu_lights"></span>
             </a>
         </li>
         <li class="row-fluid" data-ng-if="topLeftMenuCtrl.sagremorParams.benoicEnabled">
-            <a data-ng-href="#/heaters">
+            <a data-ui-sref="heaters">
                 <i class="fa fa-fire"></i>
                 <span data-translate="menu_heaters"></span>
             </a>
         </li>
         <li class="row-fluid" data-ng-if="topLeftMenuCtrl.sagremorParams.benoicEnabled">
-            <a data-ng-href="#/sensors">
+            <a data-ui-sref="sensors">
                 <i class="fa fa-line-chart fa-fw"></i>
                 <span data-translate="menu_sensors"></span>
             </a>
         </li>
         <li class="row-fluid" data-ng-repeat="service in topLeftMenuCtrl.serviceList" data-ng-if="topLeftMenuCtrl.sagremorParams.carleonEnabled">
-            <a data-ng-href="#/service/{{service.target}}">
+            <a data-ui-sref="service({service: service.target})">
 				<i data-ng-class="{'fa fa-{{service.icon}} fa-fw': true}"></i>
                 <span data-translate="{{service.title}}"></span>
             </a>
         </li>
         <li class="row-fluid">
-            <a data-ng-href="#/scripts">
+            <a data-ui-sref="scripts">
                 <i class="fa fa-tasks fa-fw"></i>
                 <span data-translate="menu_scripts"></span>
             </a>
         </li>
         <li class="row-fluid">
-            <a data-ng-href="#/events">
+            <a data-ui-sref="events">
                 <i class="fa fa-calendar fa-fw"></i>
                 <span data-translate="menu_events"></span>
             </a>
         </li>
         <li class="row-fluid">
-            <a data-ng-href="#/monitors">
+            <a data-ui-sref="monitors">
                 <i class="fa fa-bar-chart fa-fw"></i>
                 <span data-translate="menu_monitor"></span>
             </a>
         </li>
         <li class="row-fluid" data-ng-if="topLeftMenuCtrl.sagremorParams.garethEnabled">
-            <a data-ng-href="#/logs">
+            <a data-ui-sref="logs">
                 <i class="fa fa-history fa-fw"></i>
                 <span data-translate="menu_logs"></span>
             </a>
         </li>
         <li class="row-fluid">
-            <a data-ng-href="#/users">
-                <i class="fa fa-users fa-fw"></i>
-                <span data-translate="menu_users"></span>
-            </a>
-        </li>
-        <li class="row-fluid">
-            <a data-ng-href="#/parameters">
+            <a data-ui-sref="parameters">
                 <i class="fa fa-cogs fa-fw"></i>
                 <span data-translate="menu_parameters"></span>
             </a>
