--- a/src/components/core/login.html
+++ b/src/components/core/login.html
@@ -1,13 +1,13 @@
 <div class="col-xs-6 controls">
-  <label data-translate="top_right_menu_login"         data-ng-if="show=='logged-out'"></label>
-  <label data-translate="top_right_menu_logout"        data-ng-if="responseType !== 'password' && show=='logged-in'"></label>
+  <label data-translate="top_right_menu_login"         data-ng-if="responseType !== 'password' && show=='logged-out'"></label>
+  <label data-translate="top_right_menu_logout"        data-ng-if="show=='logged-in'"></label>
   <label data-translate="top_right_menu_access_denied" data-ng-if="responseType !== 'password' && show=='denied'"></label>
 </div>
 <div class="col-xs-6 controls">
   <button type="button" class="btn btn-primary btn-sm" data-ng-if="responseType !== 'password' && show=='logged-out' || show=='denied'" data-ng-click="login()">
     <i class="fa fa-sign-in" aria-hidden="true"></i>
   </button>
-  <button type="button" class="btn btn-primary btn-sm" data-ng-if="responseType !== 'password' && show=='logged-in'" data-ng-click="logout()">
+  <button type="button" class="btn btn-primary btn-sm" data-ng-if="show=='logged-in'" data-ng-click="logout()">
     <i class="fa fa-sign-out" aria-hidden="true"></i>
   </button>
 </div>
