--- a/src/components/topRightMenu/topRightMenu.template.html
+++ b/src/components/topRightMenu/topRightMenu.template.html
@@ -47,7 +47,7 @@
         data-scope="{{topRightMenuCtrl.oauth2.scope}}"
         data-authorize-path="{{topRightMenuCtrl.oauth2.authorizePath}}"
         data-token-path="{{topRightMenuCtrl.oauth2.tokenPath}}"
-        data-template="/components/core/login.html"
+        data-template="/app/login/login.html"
         data-storage="localStorage"
         data-disable-check-session="true">
       </data-oauth>
