Larger icons, add a force refresh button for after sleep mode

--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <h1 data-translate="events_title"></h1>
 
     <div class="row" data-ng-if="eventsCtrl.sagremorParams.adminMode">
