--- a/src/app/service/service.html
+++ b/src/app/service/service.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
 	<h1 data-translate="{{serviceCtrl.title}}"></h1>
 	<div data-ng-repeat="service in serviceCtrl.serviceList">
 
