--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <h1 data-translate="dashboard_title"></h1>
     <h2 data-ng-bind="DashboardCtrl.profileName">
     </h2>
