--- a/src/app/monitors/monitors.html
+++ b/src/app/monitors/monitors.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <h1 data-translate="monitors_title"></h1>
 
     <div class="row" data-ng-if="monitorsCtrl.sagremorParams.adminMode">
