--- a/src/app/parameters/parameters.html
+++ b/src/app/parameters/parameters.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
 	<h1 data-translate="parameters_title"></h1>
 	<!-- submodues enable -->
 	<h3 data-translate="param_submodule_title"></h3>
