--- a/src/app/scripts/scripts.html
+++ b/src/app/scripts/scripts.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <h1 data-translate="scripts_title"></h1>
 
     <div class="row" data-ng-if="scriptsCtrl.sagremorParams.adminMode">
