--- a/src/components/carleonMpd/carleonMpd.template.html
+++ b/src/components/carleonMpd/carleonMpd.template.html
@@ -67,6 +67,9 @@
 		<hr class="heater-hr">
 		<div class="row control-group">
 			<div class="clearfix input-group">
+				<span class="input-group-btn">
+					<button type="button" class="btn btn-default" data-ng-click="$ctrl.setAction('previous')"><i class="fa fa-backward" aria-hidden="true"></i></button>
+				</span>
 				<span class="input-group-btn" data-ng-if="$ctrl.mpd.state == 'pause' || $ctrl.mpd.state == 'play'">
 					<button type="button" class="btn btn-default" data-ng-click="$ctrl.setAction('stop')"><i class="fa fa-stop" aria-hidden="true"></i></button>
 				</span>
@@ -75,6 +78,13 @@
 				</span>
 				<span class="input-group-btn" data-ng-if="$ctrl.mpd.state == 'play'">
 					<button type="button" class="btn btn-default" data-ng-click="$ctrl.setAction('pause')"><i class="fa fa-pause" aria-hidden="true"></i></button>
+				</span>
+				<span class="input-group-btn">
+					<button type="button" class="btn btn-default" data-ng-click="$ctrl.setAction('next')"><i class="fa fa-forward" aria-hidden="true"></i></button>
+				</span>
+				<span class="input-group-btn">
+					<button type="button" data-ng-class="{'btn btn-primary': $ctrl.mpd.repeat, 'btn btn-default': !$ctrl.mpd.repeat}" data-ng-click="$ctrl.setAction('repeat')"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+					<button type="button" data-ng-class="{'btn btn-primary': $ctrl.mpd.random, 'btn btn-default': !$ctrl.mpd.random}" data-ng-click="$ctrl.setAction('random')"><i class="fa fa-random" aria-hidden="true"></i></button>
 				</span>
 			</div>
 		</div>
